array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compte = 0
  for (i <- 0 to (num.Lenght -2)) {

    if (a<b) {
      compte = compte +1
    }
  }
  return compte
}